--- a/css/styles.css
+++ b/css/styles.css
@@ -200,6 +200,21 @@ body {
     margin-top: 0px;
     margin-bottom: 50px;
 }
+.section-job .description-job {
+    width: 370px;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    position: relative;
+    bottom: 70px;
+}
+.description-job .title {
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    padding-top: 27px;
+}
 .section-team { 
     background-color: #F5F4FA;
 }
