--- a/css/styles.css
+++ b/css/styles.css
@@ -200,12 +200,15 @@ body {
     margin-top: 0px;
     margin-bottom: 50px;
 }
+.section-job .item {
+    position: relative;
+}
 .section-job .description-job {
     width: 370px;
     height: 70px;
     background: rgba(47, 48, 58, 0.8);
-    position: relative;
-    bottom: 70px;
+    position: absolute;
+    bottom: 0; 
 }
 .description-job .title {
     color: #FFFFFF;
