--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,8 @@ body {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacs-nav .link {
     display: flex;
@@ -74,18 +76,22 @@ body {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .envelope{
     width: 16px;
     height: 12px;
     margin-right: 10px;
     fill: #757575;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .smartphone{
     width: 10px;
     height: 16px;
     margin-right: 10px;
     fill: #757575;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacs-nav .link:hover .envelope,
 .contacs-nav .link:focus .envelope,
@@ -205,7 +211,6 @@ body {
 }
 .section-job .description-job {
     width: 370px;
-    height: 70px;
     background: rgba(47, 48, 58, 0.8);
     position: absolute;
     bottom: 0; 
@@ -215,8 +220,11 @@ body {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
+    text-transform: uppercase;
     text-align: center;
     padding-top: 27px;
+    padding-bottom: 27px;
+    margin-bottom: 0;
 }
 .section-team { 
     background-color: #F5F4FA;
@@ -257,11 +265,15 @@ body {
     width: 44px;
     height: 44px;
     border-radius: 50%;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icon {
     width: 20px;
     height: 20px;
     fill: #AFB1B8;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .item-social:not(:last-child) {
     margin-right: 10px;
@@ -285,6 +297,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .section-clients .link {
     display: flex;
@@ -297,6 +312,8 @@ body {
     width: 106px;
     height: 60px;
     fill: #AFB1B8;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .section-clients .item:hover,
 .section-clients .item:focus {
@@ -327,6 +344,7 @@ body {
     flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
     margin-top: 30px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-img .item:hover {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -364,6 +382,8 @@ body {
     border-radius: 4px;
     padding: 10px 32px;
     min-width: 200px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover,
 .button:focus {
@@ -382,6 +402,10 @@ body {
     border-radius: 4px;
     padding: 6px 22px;
     min-width: 73px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-portfolio:hover,
 .button-portfolio:focus{
@@ -420,6 +444,8 @@ body {
     line-height: 1.71;
     display: inline-block;
     margin-bottom: 9px;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address .last{
     margin-bottom: 0px;
@@ -460,6 +486,8 @@ body {
     height: 44px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-icon {
     width: 20px;
