--- a/css/styles.css
+++ b/css/styles.css
@@ -376,6 +376,29 @@ body {
     margin-top: 0px;
     margin-bottom: 0;
 }
+.picture-and-overlay {
+    position: relative;
+    overflow: hidden;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(33, 150, 243, 0.9);
+    font-size: 18px;
+    line-height: 1.56;
+    color: #FFFFFF;
+    width: 100%;
+    height: 100%;
+    padding: 63px 24px;
+    margin: 0;
+    overflow: auto;
+    transform: translateY(100.1%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.list-img .item:hover .overlay {
+    transform: translateY(0%);
+}   
 /* Кнопки */
 .button {
     cursor: pointer;
